<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/book_cover"
        android:layout_width="150dp"
        android:layout_height="240dp"
        android:layout_marginLeft="16dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:text="@string/title"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/book_cover"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/book_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:text="@string/author"
        app:layout_constraintStart_toEndOf="@+id/book_cover"
        app:layout_constraintTop_toBottomOf="@id/book_title" />

    <TextView
        android:id="@+id/book_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:text="1234567890"
        app:layout_constraintStart_toEndOf="@+id/book_cover"
        app:layout_constraintTop_toBottomOf="@id/book_author" />

    <TextView
        android:id="@+id/json_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/book_cover"
        app:layout_constraintBottom_toTopOf="@id/tool_bar_bottom" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar_bottom"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/background_toolbar_translucent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_goto_catalogue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/view_catalogue" />

    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>